Enhance app layout and functionality by integrating user authentication features. Update navigation to include user dropdown for sign-out and login/signup options based on authentication status. Add AWS Amplify configuration in nuxt.config.ts and update dependencies in package.json. Expand .gitignore to exclude Amplify-related files. Revise README.md to reflect project branding and features.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ logs
 .env
 .env.*
 !.env.example
+
+# Amplify
+amplify/backend/amplify-meta.json
+amplify/backend/.temp
+amplify/#current-cloud-backend
+amplify/.config
+amplify/mock-data
+amplify/mock-api-resources
+.amplify-hosting
+amplify-build-config.json
+amplifyconfiguration.json
+amplify_outputs.json
