--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "aws-amplify": "^6.0.0",
+    "@aws-amplify/ui-vue": "^4.0.0"
+  },
+  "devDependencies": {
+    "@aws-amplify/backend": "^1.0.0",
+    "@aws-amplify/backend-cli": "^1.0.0"
   }
 }
