Update Amplify configuration to change build command from 'npm run build' to 'npm run generate' and adjust output directory from '.output/public' to 'dist'.

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,9 +6,9 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run build
+        - npm run generate
   artifacts:
-    baseDirectory: .output/public
+    baseDirectory: dist
     files:
       - "**/*"
   cache:
