--- a/amplify.yml
+++ b/amplify.yml
@@ -6,9 +6,11 @@ frontend:
         - npm ci
     build:
       commands:
+        # Nuxt 4 uses Nitro; generate static files
         - npm run generate
   artifacts:
-    baseDirectory: dist
+    # Nuxt 4 outputs static assets here
+    baseDirectory: .output/public
     files:
       - "**/*"
   cache:
