Update Amplify configuration to change build command from 'npm run generate' to 'npm run build' for consistency in deployment process.

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - npm ci
     build:
       commands:
-        - npm run generate
+        - npm run build
   artifacts:
     baseDirectory: .amplify-hosting/static
     files:
